# DumpSpriteTibia74

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c  sprite_dumper.c  sprite_dumper.h  version.h.in
